--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+body {
+  font-family: "Poppins", sans-serif;
+}
 
 .container {
   max-width: 1440px;
