--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -56,6 +56,7 @@
   gap: 30px;
   padding-left: 60px;
   padding-top: 60px;
+  margin-bottom: 108px;
 }
 .detail-para {
   max-width: 401px;
@@ -76,8 +77,6 @@
   max-width: 400px;
 }
 .detail-button {
-  padding: 18px 53px;
-  gap: 10px;
   width: 208px;
   height: 52px;
   background: #fbb034;
@@ -87,11 +86,11 @@
   font-style: normal;
   font-weight: 700;
   font-size: 15px;
-  line-height: 106.5%;
-  /* identical to box height, or 16px */
   color: #000000;
   background: none;
   border: none;
+  padding-top: 1rem;
+  padding-left: 3.8rem;
 }
 .detail-img img {
   width: 100%;
